# ASR-tests

./: README.md  main.py  pyproject.toml
canary/: canary_nemo_transcript.csv  comparison_results.csv  initial_test.ipynb
