[project]
requires-python = ">=3.10,<3.12"
name = "asr-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "accelerate>=1.12.0",
    "audb>=1.11.4",
    "bitsandbytes>=0.49.0",
    "cython>=3.2.4",
    "ml-dtypes==0.5.1",
    "nemo-toolkit[asr]>=2.6.0",
    "packaging>=24.2",
    "sentencepiece>=0.2.1",
]
